# Elaborato-di-Programmazione

./: Achievements.cpp  Achievements.h  CMakeLists.txt  ConditionAchievement.cpp  ConditionAchievement.h  GUI.cpp  GUI.h  Game.cpp  Game.h  GraphicSettings.cpp  GraphicSettings.h  GraphicsSettings.cpp  Input.cpp  Input.h  Observable.cpp  Observable.h  Observer.h  README.md  TextureManager.cpp  TextureManager.h  Util.h  main.cpp
Components/: AnimationComponent.cpp  AnimationComponent.h  AttributeComponent.cpp  AttributeComponent.h  EnemyAttributeComponent.cpp  EnemyAttributeComponent.h  HitboxComponent.cpp  HitboxComponent.h  MovementComponent.cpp  MovementComponent.h
Config/: graphics.ini
Entities/: Archer.cpp  Archer.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Humanoid.cpp  Humanoid.h  Player.cpp  Player.h  Slime.cpp  Slime.h  Warrior.cpp  Warrior.h  Wizard.cpp  Wizard.h
GUI/: GUI.cpp  GUI.h  PauseMenu.cpp  PauseMenu.h  PlayerGUI.cpp  PlayerGUI.h
Map/: Gold.cpp  Gold.h  Items.cpp  Items.h  Level.cpp  Level.h  Object.cpp  Object.h  Potion.cpp  Potion.h  Torch.cpp  Torch.h
Projectile/: Projectile.cpp  Projectile.h
States/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  SettingState.cpp  SettingState.h  State.cpp  State.h
Systems/: CharacterSelection.cpp  CharacterSelection.h  MainMenu.cpp  MainMenu.h  Shop.cpp  Shop.h  TextTagSystem.cpp  TextTagSystem.h
test/: AchievementTest.cpp  CMakeLists.txt  CauseCollisionTest.cpp  runAllTests.cpp
test/lib/: runAllTests.cpp
test/lib/docs/: gmock_cook_book.md  quickstart-bazel.md
test/lib/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h
test/lib/googlemock/src/: gmock-internal-utils.cc  gmock-spec-builders.cc
test/lib/googlemock/test/: gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-spec-builders_test.cc
test/lib/googletest/include/gtest/: gtest-printers.h  gtest.h
test/lib/googletest/include/gtest/internal/: gtest-param-util.h  gtest-port.h
test/lib/googletest/src/: gtest-filepath.cc  gtest-port.cc  gtest.cc
test/lib/googletest/test/: googletest-port-test.cc  googletest-printers-test.cc  gtest_test_utils.py  gtest_unittest.cc
